# Symmetrica

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  API_STABILITY.md  CALCULUS_PROGRESS.md  CHANGELOG.md  COMPLETION_STRATEGY.md  COVERAGE_IMPROVEMENTS.md  Cargo.toml  DOCS_UPDATE_SUMMARY.md  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  PERFORMANCE_BASELINE.md  PHASE6_PROGRESS.md  PLAYGROUND_UPDATE.md  QUICK_START.md  RC1_DEVELOPMENT_SUMMARY.md  README.md  RELEASE_CHECKLIST_1.0.md  RELEASE_NOTES_RC1.md  SECURITY.md  V1_CONSOLIDATION_REPORT.md  cobertura.xml  deny.toml  tarpaulin-report.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fuzz.yml  pages.yml  release.yml
coverage/: tarpaulin-report.html
crates/algebraic/: Cargo.toml  README.md
crates/algebraic/src/: cyclotomic.rs  denesting.rs  galois.rs  lib.rs  minimal_poly.rs
crates/api/: Cargo.toml  README.md  pyproject.toml
crates/api/examples/: python_demo.py
crates/api/src/: lib.rs
crates/api/tests/: integration_test.rs
crates/arith/: Cargo.toml
crates/arith/src/: lib.rs
crates/arith/tests/: proptests.rs
crates/assumptions/: Cargo.toml
crates/assumptions/src/: lib.rs
crates/assumptions/tests/: proptests.rs
crates/calculus/: Cargo.toml
crates/calculus/benches/: calculus_benches.rs
crates/calculus/examples/: symbolic_simplification.rs
crates/calculus/src/: definite.rs  diff.rs  evaluate.rs  integrate.rs  lib.rs  limit.rs  ode.rs  risch.rs  series.rs  symbolic_simplify.rs
crates/calculus/tests/: integration_v1_1.rs  ode_bernoulli.rs  ode_exact.rs  ode_second_order.rs  proptests.rs  test_atan_integration.rs  test_inverse_trig_ibp.rs  test_sqrt_atan.rs  trig_even_even.rs  trig_even_power.rs  trig_odd_power.rs  trig_proptests.proptest-regressions  trig_proptests.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/evalf/: Cargo.toml
crates/evalf/src/: lib.rs
crates/evalf/tests/: proptests.rs
crates/expr_core/: Cargo.toml
crates/expr_core/benches/: expr_benches.rs
crates/expr_core/src/: lib.rs
crates/expr_core/tests/: proptests.rs
crates/grobner/: Cargo.toml  README.md
crates/grobner/src/: lib.rs
crates/grobner/tests/: buchberger.rs  grobner_solving.rs  solve_system.rs
crates/io/: Cargo.toml
crates/io/src/: json.rs  latex.rs  lib.rs  sexpr.rs
crates/io/tests/: proptests.proptest-regressions  proptests.rs
crates/matrix/: Cargo.toml
crates/matrix/benches/: matrix_benches.rs
crates/matrix/src/: lib.rs
crates/matrix/tests/: bench_correctness.rs  proptests.rs
crates/number_theory/: Cargo.toml  README.md
crates/number_theory/src/: diophantine.rs  factorization.rs  lib.rs  modular.rs  partitions.rs
crates/pattern/: Cargo.toml
crates/pattern/src/: ac.rs  domain.rs  lib.rs  pipeline.rs  registry.rs  rewrite.rs  scheduler.rs
crates/pattern/tests/: coverage_tests.rs  proptests.rs
crates/plot/: Cargo.toml
crates/plot/src/: lib.rs
crates/polys/: Cargo.toml
crates/polys/benches/: polys_benches.rs
crates/polys/src/: lib.rs
crates/polys/tests/: bench_correctness.rs  proptests.proptest-regressions  proptests.rs
crates/simplify/: Cargo.toml
crates/simplify/benches/: simplify_benches.rs
crates/simplify/src/: lib.rs  log_simplify.rs  radical_simplify.rs  trig_identities.rs
crates/simplify/tests/: fuzz_regression.rs  log_tests.rs  phase6_integration.rs  proptests.rs  radical_tests.rs  trig_identities_tests.rs
crates/solver/: Cargo.toml
crates/solver/benches/: solver_benches.rs
crates/solver/src/: lib.rs  transcendental.rs
crates/solver/tests/: proptests.proptest-regressions  proptests.rs
crates/special/: Cargo.toml  README.md
crates/special/src/: bessel.rs  erf.rs  expint.rs  gamma.rs  lambert.rs  lib.rs  orthogonal.rs
crates/summation/: Cargo.toml
crates/summation/benches/: summation_benches.rs
crates/summation/src/: basic.rs  convergence.rs  gosper.rs  hypergeometric.rs  lib.rs  pochhammer.rs  products.rs  zeilberger.rs
crates/summation/tests/: basic_sums.rs  hypergeometric_tests.rs  integration_tests.rs  pochhammer_tests.rs
crates/tensor/: Cargo.toml  README.md
crates/tensor/src/: einsum.rs  geometry.rs  lib.rs  symbolic.rs
crates/tests_e2e/: Cargo.toml
crates/tests_e2e/src/: lib.rs
crates/tests_e2e/tests/: api_stability_tests.rs  differential_tests.rs  documentation_tests.rs  fuzz_validation.rs  phase35_complete.rs  phase36_smoke.rs  phase6_identities.rs  phase7_number_theory.rs  phase7_scaffold.rs
crates/wasm/: Cargo.toml
crates/wasm/examples/: demo.html
crates/wasm/src/: lib.rs
docs/: API_AUDIT_1_0.md  DOCUMENTATION_AUDIT.md  PLAYGROUND.md  README.md  _config.yml  api.md  arith.md  assumptions.md  benchmarking.md  calculus.md  cli.md  differential_testing.md  evalf.md  examples-catalog.html  examples.html  expr_core.md  fuzzing.md  getting-started.html  index.html  io.md  matrix.md  pattern.md  phase5-examples.md  phase6-examples.md  playground.html  plot.md  polys.md  property_testing.md  research.md  roadmap.md  roadmap_old.md  simplify.md  skeleton.md  solver.md  wasm.md
docs/css/: docs.css  playground.css  style.css
docs/js/: main.js  playground.js
docs/pkg/: README.md  package.json  symmetrica_wasm.d.ts  symmetrica_wasm.js  symmetrica_wasm_bg.wasm  symmetrica_wasm_bg.wasm.d.ts
examples/: README.md  basic_polynomial.rs  calculus_visualization.rs  composite_functions.rs  comprehensive_demo.rs  edge_cases.rs  exponential_logarithm.rs  io_serialization.rs  matrix_linear_algebra.rs  plot_configuration.rs  polynomial_operations.rs  power_functions.rs  rational_functions.rs  trigonometric.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_diff.rs  fuzz_expr_ops.rs  fuzz_sexpr_parse.rs  fuzz_simplify.rs
