[workspace]
resolver = "2"
members = [
  "crates/expr_core",
  "crates/simplify",
  "crates/cli",
  "crates/polys",
  "crates/calculus",
  "crates/solver",
  "crates/matrix",
  "crates/assumptions",
  "crates/api",
  "crates/arith",
  "crates/pattern",
  "crates/io",
  "crates/tests_e2e",
  "crates/plot",
  "crates/evalf", "crates/wasm",
  "crates/summation", "crates/special", "crates/grobner", "crates/number_theory", "crates/tensor",
  "crates/algebraic",
]

[workspace.package]
edition = "2021"
