[package]
name = "api"
version = "1.0.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Symmetrica Python bindings via PyO3"

[lib]
name = "symmetrica"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }
simplify = { path = "../simplify" }
calculus = { path = "../calculus" }
solver = { path = "../solver" }
matrix = { path = "../matrix" }
polys = { path = "../polys" }
pattern = { path = "../pattern" }
io = { path = "../io" }
evalf = { path = "../evalf" }
plot = { path = "../plot" }
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]
