[package]
name = "evalf"
version = "1.0.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Symmetrica numeric evaluation: arbitrary-precision float evaluation of symbolic expressions"

[lib]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }
special = { path = "../special" }

[dev-dependencies]
proptest = "1.5"
