[package]
name = "expr_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Symmetrica expression core: immutable DAG with hash-consing and canonical constructors"

[lib]
path = "src/lib.rs"

[dependencies]
arith = { path = "../arith" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
simplify = { path = "../simplify" }
proptest = "1.5"

[[bench]]
name = "expr_benches"
harness = false
