[package]
name = "grobner"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Gröbner bases computation for polynomial ideal theory"

[lib]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }
polys = { path = "../polys" }
solver = { path = "../solver" }
simplify = { path = "../simplify" }

[dev-dependencies]
simplify = { path = "../simplify" }
