[package]
name = "matrix"
version = "1.0.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Symmetrica matrix/linear algebra module (stub)"

[lib]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }
arith = { path = "../arith" }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "matrix_benches"
harness = false
