[package]
name = "number_theory"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Computational number theory utilities (Phase 7 scaffold): primality, modular arithmetic, factorization"

[lib]
path = "src/lib.rs"

[dependencies]

[dev-dependencies]

[features]
default = []
number_theory_experimental = []
