[package]
name = "pattern"
version = "1.0.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Symmetrica pattern/substitution v1"

[lib]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }
simplify  = { path = "../simplify" }
assumptions = { path = "../assumptions" }

[dev-dependencies]
proptest = "1.5"
