[package]
name = "plot"
version = "1.0.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SVG plotting utilities for Symmetrica expressions"

[lib]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }

[dev-dependencies]
calculus = { path = "../calculus" }
simplify = { path = "../simplify" }
pattern = { path = "../pattern" }
io = { path = "../io" }
