[package]
name = "polys"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Symmetrica polynomials module (stub)"

[lib]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }
arith = { path = "../arith" }
matrix = { path = "../matrix" }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "polys_benches"
harness = false
