[package]
name = "simplify"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Simplification passes on top of expr_core canonical constructors"

[lib]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }
assumptions = { path = "../assumptions" }
arith = { path = "../arith" }

[dev-dependencies]
proptest = "1.5"
