[package]
name = "solver"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Symmetrica solver module (stub)"

[lib]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }
simplify = { path = "../simplify" }
polys = { path = "../polys" }
arith = { path = "../arith" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "solver_benches"
harness = false
