[package]
name = "solver"
version = "1.0.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Symmetrica solver module (stub)"

[lib]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }
simplify = { path = "../simplify" }
polys = { path = "../polys" }
arith = { path = "../arith" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
proptest = "1.5"
pattern = { path = "../pattern" }

[[bench]]
name = "solver_benches"
harness = false
