[package]
name = "special"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Special functions: Gamma, Ei, erf with symbolic + numeric support"

[dependencies]
expr_core = { path = "../expr_core" }
arith = { path = "../arith" }
simplify = { path = "../simplify" }
