[package]
name = "summation"
version = "1.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Symmetrica symbolic summation module - Gosper's and Zeilberger's algorithms"

[lib]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }
simplify  = { path = "../simplify" }
arith = { path = "../arith" }
polys = { path = "../polys" }
calculus = { path = "../calculus" }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "summation_benches"
harness = false
