[package]
name = "summation"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Symbolic summation utilities and helpers"

[dependencies]
expr_core = { path = "../expr_core" }
arith = { path = "../arith" }
polys = { path = "../polys" }
simplify = { path = "../simplify" }
