[package]
name = "tests_e2e"
version = "1.0.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Symmetrica end-to-end integration tests"

[lib]
path = "src/lib.rs"

[dependencies]
expr_core = { path = "../expr_core" }
simplify  = { path = "../simplify" }
calculus  = { path = "../calculus" }
polys     = { path = "../polys" }
pattern   = { path = "../pattern" }
io        = { path = "../io" }
arith     = { path = "../arith" }
solver    = { path = "../solver" }
matrix    = { path = "../matrix" }
evalf     = { path = "../evalf" }
plot      = { path = "../plot" }
assumptions = { path = "../assumptions" }
grobner   = { path = "../grobner" }
summation = { path = "../summation" }
special   = { path = "../special" }
number_theory = { path = "../number_theory", features = ["number_theory_experimental"] }
