[package]
name = "symmetrica-wasm"
version = "1.0.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WebAssembly bindings for Symmetrica symbolic computation engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
expr_core = { path = "../expr_core" }
simplify = { path = "../simplify" }
calculus = { path = "../calculus" }
solver = { path = "../solver" }
io = { path = "../io" }
evalf = { path = "../evalf" }
pattern = { path = "../pattern" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
